# pi-recall

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
docs/: architecture.md
native/: Cargo.toml
native/src/: lib.rs
scripts/: build-native.mjs
src/: auto-tag.ts  format.ts  index.ts  native-binding.ts  recall-index.ts  recall-picker.ts  session-parser.ts  tag-store.ts  types.ts
test/: recall-index.test.ts  session-parser.test.ts  tag-store.test.ts
test/fixtures/: smoke-session.jsonl
